vin/main.c.error
clang: warning: /usr/local/lib/neo-c-str.o: 'linker' input unused [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/openssl/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/boehmgc/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/zstd/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/ncurses/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/ncurses/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/usr/local/opt/ncurses/lib' [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-s' [-Wunused-command-line-argument]
main.c:7:1: warning: typedef requires a name [-Wmissing-declarations]
    7 | typedef unsigned long  long    ;
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
main.c:2690:46: error: unknown type name 'wstring'; did you mean 'string'?
 2690 | void ViWin_insertText(struct ViWin*  self  , wstring text);
      |                                              ^~~~~~~
      |                                              string
main.c:5:15: note: 'string' declared here
    5 | typedef char* string;
      |               ^
main.c:2872:47: error: unknown type name 'wstring'; did you mean 'string'?
 2872 | void ViWin_insertText2(struct ViWin*  self  , wstring text);
      |                                               ^~~~~~~
      |                                               string
main.c:5:15: note: 'string' declared here
    5 | typedef char* string;
      |               ^
main.c:3254:29: error: use of undeclared identifier 'list$1wstring$$p_finalize'
 3254 |         come_call_finalizer(list$1wstring$$p_finalize, self->yank, (void*)0, (void*)0, 0, 0, 0, (void*)0, "Vi_finalize}", 4, 39);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
main.c:3257:29: error: use of undeclared identifier 'list$1wstring$$p_finalize'
 3257 |         come_call_finalizer(list$1wstring$$p_finalize, self->fileYank, (void*)0, (void*)0, 0, 0, 0, (void*)0, "Vi_finalize}", 5, 40);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
main.c:3293:29: error: use of undeclared identifier 'list$1wstring$$p_finalize'
 3293 |         come_call_finalizer(list$1wstring$$p_finalize, self->texts, (void*)0, (void*)0, 0, 0, 0, (void*)0, "ViWin_finalize}", 2, 6);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
main.c:3419:29: error: use of undeclared identifier 'list$1wstring$$p_finalize'
 3419 |         come_call_finalizer(list$1wstring$$p_finalize, self->item, (void*)0, (void*)0, 0, 0, 0, (void*)0, "list_item$1list$1wstring$$ph$p_finalize}", 2, 13);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
main.c:6203:31: warning: cast to smaller integer type 'int' from 'void *' [-Wvoid-pointer-to-int-cast]
 6203 |     return (int_get_hash_key(((int)value)));
      |                               ^~~~~~~~~~
main.c:7515:12: warning: comparison between pointer and integer ('int' and 'void *') [-Wpointer-integer-compare]
 7515 |     if(self==((void*)0)) {
      |        ~~~~^ ~~~~~~~~~~
main.c:7528:12: warning: comparison between pointer and integer ('long' and 'void *') [-Wpointer-integer-compare]
 7528 |     if(self==((void*)0)) {
      |        ~~~~^ ~~~~~~~~~~
4 warnings and 6 errors generated.
